syntax = "proto3";

package blipblop.services.containers.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "api/services/events/v1/events.proto";
import "api/types/v1/meta.proto";
import "google/protobuf/wrappers.proto";


option go_package = "github.com/amimof/blipblop/api/services/containers/v1;containers";

service ContainerService {
  rpc Get(GetContainerRequest) returns (GetContainerResponse) {
    option (google.api.http) = {
      get: "/api/v1/containers/{id}"
    };
	}
	rpc List(ListContainerRequest) returns (ListContainerResponse) {
		option (google.api.http) = {
			get: "/api/v1/containers"
		};
	}
	rpc Create(CreateContainerRequest) returns (CreateContainerResponse) {
    option (google.api.http) = {
      post: "/api/v1/containers"
      body: "container"
    };
	}
	rpc Update(UpdateContainerRequest) returns (UpdateContainerResponse) {
    option (google.api.http) = {
      put: "/api/v1/containers/{container.meta.name}"
      body: "container"
      additional_bindings {
        patch: "/api/v1/containers/{container.meta.name}"
        body: "container"
      }
    };
	}
	rpc Delete(DeleteContainerRequest) returns (DeleteContainerResponse) {
    option (google.api.http) = {
      delete: "/api/v1/containers/{id}"
    };
	}
	rpc Start(StartContainerRequest) returns (StartContainerResponse) {
    option (google.api.http) = {
      put: "/api/v1/containers/{id}/start"
    };
	}
	rpc Kill(KillContainerRequest) returns (KillContainerResponse) {
    option (google.api.http) = {
      put: "/api/v1/containers/{id}/kill"
    };
	}
}


message Container {
  blipblop.types.v1.Meta meta = 1 [(validate.rules).message.required = true];
  Config config = 2 [(validate.rules).message.required = true];
  Status status = 3;
}

message Status {
	string phase = 1;
	string node = 2;
	string ip = 3;
  TaskStatus task = 4;
  RuntimeStatus runtime = 5;
}

message TaskStatus {
  google.protobuf.UInt32Value pid = 1;
  google.protobuf.UInt32Value exitCode = 2;
  google.protobuf.Timestamp exitTime = 3;
  google.protobuf.StringValue error = 4;
}

message RuntimeStatus {
  string runtime_env = 1;
  string runtime_version = 2;
  string stdout_path = 3;
  string stderr_path = 4;
}

message Config {
	string image = 1 [ (validate.rules).string.min_len = 1];
	repeated string args = 2;
	repeated EnvVar envvars = 3;
	repeated Mount mounts = 4;
	repeated PortMapping portMappings = 5; 
  map<string, string> nodeSelector = 6;
}

message Mount {
  string name = 1 [ (validate.rules).string.min_len = 1];
	string destination = 2;
	string type = 3;
	string source = 4;
	repeated string options = 5;
}

message EnvVar {
  string name = 1 [(validate.rules).string.min_len = 1];
  string value = 2 [(validate.rules).string.min_len = 1];
}

message PortMapping {
  string name = 1 [(validate.rules).string.min_len = 1];
	uint32 hostPort = 2;
	uint32 containerPort = 3;
	string protocol = 4;
	string hostIP = 5;
}

enum Phase {
  Unknown = 0;
  Starting = 1;
  Stopping = 2;
  Running = 3;
  Error = 4;
  Pulling = 5;
  Deleting = 6;
  Scheduling = 7;
}

message Event {
  google.protobuf.Timestamp created = 1;
  blipblop.services.events.v1.EventType type = 2; 
  string description = 3;
}

message GetContainerRequest {
  string id = 1 [(validate.rules).string.min_len = 1];
}

message GetContainerResponse {
	Container container = 1;
}

message CreateContainerRequest {
	Container container = 1 [(validate.rules).message.required = true];
}

message CreateContainerResponse {
	Container container = 1;
}

message UpdateContainerRequest {
  string id = 1 [(validate.rules).string.min_len = 1];
  Container container = 2 [(validate.rules).message.required = true];
  google.protobuf.FieldMask update_mask = 3;
}

message UpdateContainerResponse {
  Container container = 1;
}

message DeleteContainerRequest {
	string id = 1 [(validate.rules).string.min_len = 1];
}

message DeleteContainerResponse {
	string id = 1 ;
}

message ListContainerRequest {
	map<string, string> selector = 1;
}

message ListContainerResponse {
	repeated Container containers = 1;
}

message StartContainerRequest {
	string id = 1 [(validate.rules).string.min_len = 1];
}

message StartContainerResponse {
	string id = 1;
}

message StopContainerRequest {
	string id = 1 [(validate.rules).string.min_len = 1];
}

message StopContainerResponse {
	string id = 1;
}

message KillContainerRequest {
	string id = 1 [(validate.rules).string.min_len = 1];
  bool forceKill = 2;
}

message KillContainerResponse {
	string id = 1;
}

